{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 63,
  "lineage": "9ad3f262-2c63-9316-b806-9b4442ef067b",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:network-acl/acl-021e69bb67bfcddbd",
            "default_network_acl_id": "acl-021e69bb67bfcddbd",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-021e69bb67bfcddbd",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "533267418676",
            "subnet_ids": [
              "subnet-005ba5b14c6efb7be",
              "subnet-01ddfbb848284c1b0",
              "subnet-023264e8b0c305009",
              "subnet-03dd9f236fb4e9993",
              "subnet-043751e2a66fd7eeb",
              "subnet-06f57e7f9954b6d9f",
              "subnet-0818886ebc4582219",
              "subnet-0c2f9837eff55e83a",
              "subnet-0cf8d54254272fbc1"
            ],
            "tags": {
              "Name": "vpc-dev-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "vpc-dev-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-009c0dedea53e655a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:route-table/rtb-06b3d497a22a18ca6",
            "default_route_table_id": "rtb-06b3d497a22a18ca6",
            "id": "rtb-06b3d497a22a18ca6",
            "owner_id": "533267418676",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-dev-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "vpc-dev-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-009c0dedea53e655a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:security-group/sg-084fa3b95cf0b894b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-084fa3b95cf0b894b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "533267418676",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-dev-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "vpc-dev-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-009c0dedea53e655a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:internet-gateway/igw-0ec604749697774d4",
            "id": "igw-0ec604749697774d4",
            "owner_id": "533267418676",
            "tags": {
              "Name": "vpc-dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "vpc-dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-009c0dedea53e655a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ec604749697774d4",
            "id": "r-rtb-06e847b0daad18f861080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06e847b0daad18f86",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:route-table/rtb-06ed0ebd63a4a92c4",
            "id": "rtb-06ed0ebd63a4a92c4",
            "owner_id": "533267418676",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-dev-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "vpc-dev-private-us-east-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-009c0dedea53e655a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:route-table/rtb-08f5f1697ddceb3b5",
            "id": "rtb-08f5f1697ddceb3b5",
            "owner_id": "533267418676",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-dev-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "vpc-dev-private-us-east-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-009c0dedea53e655a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:route-table/rtb-0f5b480694a6ae75e",
            "id": "rtb-0f5b480694a6ae75e",
            "owner_id": "533267418676",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-dev-private-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "vpc-dev-private-us-east-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-009c0dedea53e655a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:route-table/rtb-06e847b0daad18f86",
            "id": "rtb-06e847b0daad18f86",
            "owner_id": "533267418676",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ec604749697774d4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-dev-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "vpc-dev-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-009c0dedea53e655a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6405590b4c592ff",
            "route_table_id": "rtb-06ed0ebd63a4a92c4",
            "subnet_id": "subnet-043751e2a66fd7eeb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa08fe262eff8b5d",
            "route_table_id": "rtb-08f5f1697ddceb3b5",
            "subnet_id": "subnet-005ba5b14c6efb7be"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b40368ac95d5e9d3",
            "route_table_id": "rtb-0f5b480694a6ae75e",
            "subnet_id": "subnet-0818886ebc4582219"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094a18f2ed96c8825",
            "route_table_id": "rtb-06ed0ebd63a4a92c4",
            "subnet_id": "subnet-023264e8b0c305009"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0367e8859328971d9",
            "route_table_id": "rtb-08f5f1697ddceb3b5",
            "subnet_id": "subnet-06f57e7f9954b6d9f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0c6ff94a1ec9a31",
            "route_table_id": "rtb-0f5b480694a6ae75e",
            "subnet_id": "subnet-01ddfbb848284c1b0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003fc3f0b90310d50",
            "route_table_id": "rtb-06e847b0daad18f86",
            "subnet_id": "subnet-03dd9f236fb4e9993"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c16e4c9b06c7c17",
            "route_table_id": "rtb-06e847b0daad18f86",
            "subnet_id": "subnet-0c2f9837eff55e83a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb4612a1d7975574",
            "route_table_id": "rtb-06e847b0daad18f86",
            "subnet_id": "subnet-0cf8d54254272fbc1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:subnet/subnet-043751e2a66fd7eeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043751e2a66fd7eeb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267418676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-dev-db-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "vpc-dev-db-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-009c0dedea53e655a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:subnet/subnet-005ba5b14c6efb7be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005ba5b14c6efb7be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267418676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-dev-db-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "vpc-dev-db-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-009c0dedea53e655a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:subnet/subnet-0818886ebc4582219",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0818886ebc4582219",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267418676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-dev-db-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "vpc-dev-db-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-009c0dedea53e655a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:subnet/subnet-023264e8b0c305009",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023264e8b0c305009",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267418676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-dev-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "vpc-dev-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-009c0dedea53e655a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:subnet/subnet-06f57e7f9954b6d9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f57e7f9954b6d9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267418676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-dev-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "vpc-dev-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-009c0dedea53e655a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:subnet/subnet-01ddfbb848284c1b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ddfbb848284c1b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267418676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-dev-private-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "vpc-dev-private-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-009c0dedea53e655a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:subnet/subnet-03dd9f236fb4e9993",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03dd9f236fb4e9993",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267418676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-dev-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "vpc-dev-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-009c0dedea53e655a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:subnet/subnet-0c2f9837eff55e83a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2f9837eff55e83a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267418676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-dev-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "vpc-dev-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-009c0dedea53e655a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:subnet/subnet-0cf8d54254272fbc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf8d54254272fbc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267418676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-dev-public-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "vpc-dev-public-us-east-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-009c0dedea53e655a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:vpc/vpc-009c0dedea53e655a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-021e69bb67bfcddbd",
            "default_route_table_id": "rtb-06b3d497a22a18ca6",
            "default_security_group_id": "sg-084fa3b95cf0b894b",
            "dhcp_options_id": "dopt-0ff8db6bbbffac901",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-009c0dedea53e655a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b3d497a22a18ca6",
            "owner_id": "533267418676",
            "tags": {
              "Name": "vpc-dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "vpc-dev",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}